force-app/main/default/objects/AccesoriosComboParaNegociacion__c/AccesoriosComboParaNegociacion__c.object-meta.xml
<CustomObject>
    <label>Accesorio del combo para negociación</label>
    <nameField>
        <displayFormat>ACN-{000000000}</displayFormat>
        <label>Nombre de Aceesorios del combo para nego</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accesorios del combo para negociación</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>