force-app/main/default/objects/AccesoriosComboParaNegociacion__c/fields/Accesorio__c.field-meta.xml
<CustomField>
    <fullName>Accesorio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accesorio</label>
    <referenceTo>Accesorios__c</referenceTo>
    <relationshipName>Accesorios_del_combo_para_negociaci_n</relationshipName>
    <type>Lookup</type>
</CustomField>