force-app/main/default/objects/AccesoriosComboParaNegociacion__c/fields/Asociar_al_informe_Negociacion__c.field-meta.xml
<CustomField>
    <fullName>Asociar_al_informe_Negociacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asociar al informe de negociación</label>
    <type>Checkbox</type>
</CustomField>