force-app/main/default/objects/AccesoriosComboParaNegociacion__c/fields/Codigo_del_accesorio__c.field-meta.xml
<CustomField>
    <fullName>Codigo_del_accesorio__c</fullName>
    <formula>Accesorio__r.CodigoParte__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código del accesorio</label>
    <type>Text</type>
</CustomField>