force-app/main/default/objects/AccesoriosComboParaNegociacion__c/fields/Combo_del_informe__c.field-meta.xml
<CustomField>
    <fullName>Combo_del_informe__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Combo del informe</label>
    <referenceTo>CombosDeInformeDeNegociacion__c</referenceTo>
    <relationshipName>Accesorios_del_combo_para_negociaci_n</relationshipName>
    <type>Lookup</type>
</CustomField>